--- a/Website/styleED.css
+++ b/Website/styleED.css
@@ -7,16 +7,18 @@ body {
     font-family:'Poppins',sans-serif;
 }
 
-
+/*Employee Table*/
 h1{
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
+/* Have space between the title and the button */
 .row{
     justify-content: space-between;
 }
 
+/* Buttons in the main page */
 .buttons {
     padding-top: 10px;
 }
@@ -39,6 +41,8 @@ h1{
     background: linear-gradient(to right, #D64141, #F37A65); /* Fully shown on mouse-over */
   }
 
+
+/* Delete button on the Modal */
 .delbtn {
     height: 35px;
     width: 70px;
@@ -53,6 +57,8 @@ h1{
     text-shadow: 0px 0px 0px 2px rgba(0,0,0,0.2);
 }
 
+
+/* Modal styling */
 .modal {
     width: 50%;
     padding: 50px 100px;
@@ -75,7 +81,7 @@ h1{
     color: white;
 }
 
-
+/* Modal inputs */
 .input_box label {
     font-weight: 500;
     margin-bottom: 5px;
